'feat/class2': Create Domain model and database seed. Update 'SecurityConfig' class and 'pom.xml' and 'application.properties' files. Create 'application-test.properties' and 'Movie', 'User', 'Score' and 'ScorePK' classes.